# home.conf

./: README.md  kitty.conf  vimrc  wezterm.lua  zshrc
PowerShell/: Microsoft.PowerShell_profile.ps1
skills/: .gitignore
skills/debug-thread-network/references/: thread-addressing.md
skills/debug-thread-network/scripts/: query_otbr_api.sh  test_thread_connectivity.sh
skills/privacy-review/references/: patterns.md
skills/privacy-review/scripts/: privacy_scan.py
skills/python-project/: SKILL.md
skills/python-uv/: .SKILL.md.swp
skills/python-uv/assets/: template-api.py  template-cli.py  template-data.py
skills/python-uv/references/: uvx-guide.md
skills/python-uv/scripts/: .add_inline_dependencies.py.swp  add_inline_dependencies.py
skills/skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py
skills/uv-project-management/: SKILL.md
skills2/debug-thread-network/: SKILL.md
skills2/debug-thread-network/references/: otbr-api.md  router-advertisements.md
skills2/python-uv/: SKILL.md
skills2/python-uv/assets/: template-api.py  (+2 more)
tskill/: .pre-commit-config.yaml  PREK_MIGRATION.md  QUICKSTART.md  README.md  TOOLING_SUMMARY.md  TYPE_THEORY.md  pyproject.toml
tskill/.github/workflows/: type-check.yml
tskill/docs/: ARCHITECTURE.md  QUICKSTART.md  README.md  TOOLING.md  USE_CASES.md
tskill/scripts/: setup-precommit.sh
tskill/src/skill_manager/: __init__.py  __main__.py  cli.py  manager.py  models.py  tui.py
tskill/tests/: conftest.py
tskill/tests/skill_manager/: __init__.py  test_cli.py  test_manager.py
wezterm/: custom.lua
(+8 files in other folders)
