[project]
name = "tskill"
version = "0.1.0"
description = "Terminal UI for managing Claude skills"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.14.11,<1.0.0",
    "pyright>=1.1.0,<2.0.0",
    "mypy>=1.19.1,<2.0.0",
]

[project.scripts]
tskill = "skill_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_manager"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I", "N", "W", "UP"]
lint.ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "tests",
]

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[tool.pytest]
addopts = ["--import-mode=importlib"]
pythonpath = [".", "src"]
testpaths = ["tests"]
